[project]
name = "athena"
version = "0.1.0"
description = "ATHENA – Automated Transformations Highlighted and Explained Nicely and Accurately."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
